# counting_manifolds

./: Dockerfile  LICENSE  README.md  pyproject.toml
configs/: gemma-2-2b.yml  gemma-2-9b.yml  gemma-3-12b-it.yml  gemma-3-12b-pt.yml  gemma-3-1b-it.yml  gemma-3-1b-pt.yml  gemma-3-270m-it.yml  gemma-3-270m.yml  gemma-3-4b-it.yml  gemma-3-4b-pt.yml  gpt2-large.yml  gpt2-medium.yml  gpt2-xl.yml  gpt2.yml  llama3.1-8b.yml  pythia-1.4b.yml  pythia-14m.yml  pythia-160m.yml  pythia-1b.yml  pythia-2.8b.yml  pythia-410m.yml  pythia-70m.yml  qwen3-0.6b.yml  qwen3-1.7b.yml  qwen3-14b.yml  qwen3-4b.yml  qwen3-8b.yml
counting_manifolds/: family_metrics.py  main.py
